--- a/static/styles/details.css
+++ b/static/styles/details.css
@@ -1,128 +1,4 @@
-/*#car-details {*/
-/*    position: relative;*/
-/*    display: block;*/
-/*    width: 980px;*/
-/*    margin: 40px auto;*/
-/*    overflow: hidden;*/
-/*    border-radius: 10px;*/
-/*    transition: all 0.4s;*/
-/*}*/
 
-/*#car-details>h1 {*/
-/*    color: #fff;*/
-/*    font-family: "Agency FB", serif;*/
-/*    font-size: 55px;*/
-/*    font-weight: 600;*/
-/*    margin-bottom: 40px;*/
-/*    text-transform: uppercase;*/
-/*    text-align: center;*/
-/*}*/
-
-/*.info-section {*/
-/*    position: relative;*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    background-blend-mode: multiply;*/
-/*    z-index: 2;*/
-/*    border-radius: 10px;*/
-/*    background-color: whitesmoke;*/
-/*}*/
-
-/*.car-header {*/
-/*    position: relative;*/
-/*    padding: 25px;*/
-/*    height: 40%;*/
-/*}*/
-
-/*.game_header>h1 {*/
-/*    color: black;*/
-/*    margin-top: 5px;*/
-/*    font-size: 36px;*/
-/*    font-weight: 400;*/
-/*}*/
-
-/*.game_header>h4 {*/
-/*    color: #555;*/
-/*    font-size: 23px;*/
-/*    font-weight: 400;*/
-/*}*/
-
-/*.levels {*/
-/*    display: inline-block;*/
-/*    margin-top: 15px;*/
-/*    color: #555;*/
-/*    padding: 7px;*/
-/*    border-radius: 5px;*/
-/*    background-color: #b4b6ee;*/
-/*    border: 1px solid rgba(218, 181, 181, 0.829);*/
-/*}*/
-
-/*.type {*/
-/*    display: inline-block;*/
-/*    color: #959595;*/
-/*    font-size: 19px;*/
-/*    margin-left: 10px;*/
-/*}*/
-
-/*.car-img {*/
-/*    position: relative;*/
-/*    float: left;*/
-/*    margin-left: 15px;*/
-/*    margin-right: 22px;*/
-/*    height: 220px;*/
-/*    border-radius: 50%;*/
-/*    box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.5);*/
-/*}*/
-
-/*.info-section>.text {*/
-/*    margin-top: 30px;*/
-/*    padding: 60px;*/
-/*    height: 50%;*/
-/*}*/
-
-/*.car-summary {*/
-/*    margin-top: 15px;*/
-/*    padding: 60px;*/
-/*    height: 50%;*/
-/*}*/
-
-/*.text {*/
-/*    font-size: 25px;*/
-/*    color: #545454;*/
-/*}*/
-
-/*.movie_social {*/
-/*    height: 10%;*/
-/*    padding-left: 15px;*/
-/*    padding-bottom: 20px;*/
-/*}*/
-
-/*.movie_social {*/
-/*    font-size: 1.6rem;*/
-/*    padding-top: 20px;*/
-/*    text-align: center;*/
-/*}*/
-
-/*.buttons {*/
-/*    height: 10%;*/
-/*    text-align: right;*/
-/*    padding-right: 15px;*/
-/*    padding-bottom: 40px;*/
-/*}*/
-
-/*.button {*/
-/*    height: 15%;*/
-/*    background-color: #54557b;*/
-/*    padding: 14px;*/
-/*    margin-top: auto;*/
-/*    font-size: 21px;*/
-/*    color: rgb(255, 255, 255);*/
-/*}*/
-
-/*.button:hover {*/
-/*    background-color: #6f5d9c;*/
-/*    color: white;*/
-/*}*/
 
 #game-details {
     position: relative;
@@ -147,8 +23,9 @@
 }
 
 .info-section {
-    position: relative;
     width: 97%;
+    display: block;
+    margin: 5% auto;
     background-blend-mode: multiply;
     z-index: 2;
     border-radius: 25px;
@@ -177,10 +54,11 @@
 }
 
 .levels {
-    display: inline-block;
-    margin-top: 15px;
-    margin-left: 50px;
-    color: #4b4b4b;
+    display: flex;
+    margin: 2% auto;
+    max-width: 30%;
+    text-align: center;
+    color: white;
     padding: 15px;
     border-radius: 5px;
     background-color: #56b166;
