--- a/templates/car/details-car.html
+++ b/templates/car/details-car.html
@@ -11,15 +11,16 @@
                      alt='game image'/>
                 <!-- title and rating -->
                 <h1>{{ car.title }} {{ car.model }}</h1>
-                <span class="levels">Priority: {{ car.priority }}</span>
+                <span >Priority: {{ car.priority }}</span>
+                <!-- game summary (if any)-->
+                {% if car.summary %}
+                    <p class="text">Summary: {{ car.summary }}</p>
+                {% endif %}
                 <!-- game category -->
 
 
             </div>
-            <!-- game summary (if any)-->
-            {% if car.summary %}
-                <p class="text">{{ car.summary }}</p>
-            {% endif %}
+
             <!-- Edit/Delete buttons -->
             <div class="buttons">
                 <a href="{% url 'edit-car-page' car.pk %}" class="button">Edit</a>
